force-app/main/default/objects/Dealer_Order__c/Dealer_Order__c.object-meta.xml
<CustomObject>
    <description>Battery orders submitted through the VoltCore dealer portal.</description>
    <label>Dealer Order</label>
    <nameField>
        <displayFormat>SF-DORD-{000000}</displayFormat>
        <label>Dealer Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>