force-app/main/default/objects/Dealer_Order__c/fields/Dealer_User__c.field-meta.xml
<CustomField>
    <fullName>Dealer_User__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Dealer User</label>
    <referenceTo>Contact</referenceTo><relationshipLabel>Dealer Orders</relationshipLabel>
    <relationshipName>Dealer_Orders</relationshipName><required>false</required><type>Lookup</type>
</CustomField>