force-app/main/default/objects/Dealer_Order__c/fields/External_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Order_Number__c</fullName><externalId>true</externalId><label>Portal Order Number</label>
    <length>30</length><required>false</required><type>Text</type><unique>true</unique>
</CustomField>