force-app/main/default/objects/Dealer_Order__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName><label>Payment Status</label><required>false</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>PENDING</fullName><default>true</default><label>Pending</label></value>
        <value><fullName>PAID</fullName><default>false</default><label>Paid</label></value>
        <value><fullName>FAILED</fullName><default>false</default><label>Failed</label></value>
        <value><fullName>REFUNDED</fullName><default>false</default><label>Refunded</label></value>
    </valueSetDefinition></valueSet>
</CustomField>