force-app/main/default/objects/Dealer_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName><label>Order Status</label><required>false</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>PENDING</fullName><default>true</default><label>Pending</label></value>
        <value><fullName>CONFIRMED</fullName><default>false</default><label>Confirmed</label></value>
        <value><fullName>PROCESSING</fullName><default>false</default><label>Processing</label></value>
        <value><fullName>SHIPPED</fullName><default>false</default><label>Shipped</label></value>
        <value><fullName>DELIVERED</fullName><default>false</default><label>Delivered</label></value>
        <value><fullName>CANCELLED</fullName><default>false</default><label>Cancelled</label></value>
    </valueSetDefinition></valueSet>
</CustomField>