force-app/main/default/objects/Dealer_Order__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName><label>Subtotal</label><precision>12</precision>
<scale>2</scale><type>Currency</type>
</CustomField>