force-app/main/default/objects/Dealer_Order__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName><label>Tax Amount</label><precision>12</precision>
<scale>2</scale><type>Currency</type>
</CustomField>