force-app/main/default/objects/Dealer_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName><label>Total Amount</label><precision>12</precision>
<scale>2</scale><type>Currency</type>
</CustomField>