force-app/main/default/objects/Dealer_Order__c/listViews/All_Dealer_Orders.listView-meta.xml
<ListView>
    <fullName>All_Dealer_Orders</fullName>
    <columns>NAME</columns>
    <columns>External_Order_Number__c</columns>
    <columns>Dealer__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Portal_Created_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Dealer Orders</label>
</ListView>